fixed RHS overflow issue using width: calc(100% - 20px) property

--- a/TrackerApp/styles.css
+++ b/TrackerApp/styles.css
@@ -27,7 +27,7 @@ body {
     border: none;
     cursor: pointer;
     margin: 5px 10px;
-    width: 100%;
+    width: calc(100% - 20px);
     text-align: left;
     padding: 18px;
     font-size: 15px;
